# xs2arr

./: README.md  pyproject.toml
notebooks/: rate_coeff_calc.ipynb
src/xs2arr/: __init__.py  constants.py  cross_section.py  io.py  main.py  model.py
tests/: example_lxcat.txt  test_main.py
