[build-system]
requires = ["setuptools >= 42.0",
    "setuptools_scm[toml] >= 6.2",
    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xs2arr"
authors = [
    {name = "Andrew Gibson"}
]
description = "Calculates Arrhenius coefficients from a provided cross section"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lmfit>=1.3.3",
    "lxcat-data-parser>=0.1.1",
    "numpy<2",
    "pandas<1.5",
]
dynamic = ["version"]

[project.scripts]
xs2arr = "xs2arr:run"

[project.optional-dependencies]
tests = []

[tool.setuptools_scm]

[dependency-groups]
tests = [
    "hypothesis>=6.135.16",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
    "syrupy>=4.9.1",
]
